# pdomain-ocr-trainer-spa

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEX.md  CONVENTIONS.md  DEVELOPMENT.md  DOCGRAPH.md  Dockerfile  Makefile  OPEN_QUESTIONS.md  README.md  docgraph.toml  install.ps1  install.sh  mise.toml  pyproject.toml
.basedpyright/: baseline.json
.github/workflows/: ci.yml  dep-refresh.yml  nightly.yml  release.yml
build_hooks/: spa_check.py
docs/: roadmap.md
docs/architecture/: labeler-import-and-freshness.md  trainer-workflows.md
docs/context/: current-state.md  decisions.md  intent-map.md
docs/conventions/: lint-deviations.md
docs/decisions/: 2026-07-21-github-issues-archive.md  2026-07-21-github-issues-cutover.md
docs/handoff/: 2026-07-17-issue-tracker-migration.md
docs/issues/: 2026-07-21-gh-001-milestone-roadmap.md  2026-07-21-gh-014-m12-typeface-classifier.md  2026-07-21-gh-015-m13-glyph-eval-slicing.md  2026-07-21-gh-016-m14-glyph-classifier.md  2026-07-21-gh-025-unify-jobs-surfaces.md  README.md  TEMPLATE.md
docs/plans/: 2026-05-21-pd-ocr-trainer-spa-milestones.md  2026-06-08-compute-settings-panel-backlog.md  2026-06-10-eslint-rules-reenable.md  2026-06-10-labeler-import-discovery.md  2026-06-10-m12-typeface-classifier.md  2026-06-10-pdomain-ui-adoption-and-compute-panel.md  2026-07-14-review-fixes.md
docs/process/: lint-deviations.md  writing-style.md
frontend/: .npmrc  .prettierignore  eslint.config.js  index.html  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  jsx-dev-runtime-shim.ts  main.tsx
frontend/src/api/: banners.ts  datasets.ts  errors.ts  eval.ts  jobs.test.ts  jobs.ts  models.ts  profiles.test.ts  profiles.ts  publish.test.ts  publish.ts  runs.ts
frontend/src/components/: AppChrome.tsx  AppHeader.test.tsx  AppHeader.tsx  AppToaster.tsx  BannerStack.test.tsx  BannerStack.tsx  EvalMetricsTable.tsx  HotkeyHelpDialog.test.tsx  HotkeyHelpDialog.tsx  LogViewer.test.tsx  LogViewer.tsx  LossChart.test.tsx  LossChart.tsx  ProfileEditDialog.test.tsx  ProfileEditDialog.tsx  PublishDialog.test.tsx  PublishDialog.tsx  RunArgsEditor.test.tsx  RunArgsEditor.tsx  runArgsEditorConfig.ts
frontend/src/hooks/: useHotkey.ts  useNotificationStream.test.tsx  useNotificationStream.ts
frontend/src/lib/: appEnv.ts  errorMessages.test.ts  errorMessages.ts  hotkeyRegistry.test.ts  hotkeyRegistry.ts  toast.ts  toastEmitter.ts
frontend/src/pages/: DatasetsPage.test.tsx  DatasetsPage.tsx  EvalFormPage.test.tsx  EvalFormPage.tsx  EvalResultPage.test.tsx  EvalResultPage.tsx  ModelDetailPage.test.tsx  ModelDetailPage.tsx  ModelsPage.test.tsx  ModelsPage.tsx  NewRunPage.test.tsx  NewRunPage.tsx  ProfileDetailPage.test.tsx  ProfileDetailPage.tsx  ProfilesPage.test.tsx  ProfilesPage.tsx  PublishPage.test.tsx  PublishPage.tsx  RunDetailPage.test.tsx  RunDetailPage.tsx  RunListPage.test.tsx  RunListPage.tsx  TypefaceKanbanPage.test.tsx  TypefaceKanbanPage.tsx
frontend/src/shell/: ComputePanelContent.test.tsx  ComputePanelContent.tsx  TrainerHeader.test.tsx  TrainerHeader.tsx  TrainerRail.test.tsx  TrainerRail.tsx  trainerSettingsPanels.ts  useTrainerJobs.test.ts  useTrainerJobs.ts  useTrainerShortcuts.test.ts  useTrainerShortcuts.ts
frontend/src/stores/: datasetsStore.test.ts  datasetsStore.ts  profilesStore.test.ts  profilesStore.ts
frontend/src/test/: setup.ts  tokensSmokeTest.test.ts
scripts/: ci-against-main.sh  ci-against-master.sh  do-release.sh  git_main_sources.py  git_master_sources.py  local-check.sh  local-dev.sh  local-frontend-install.sh  local-run.sh  local-setup-py.sh  local-setup.sh  release-common.sh  update-pd-deps.sh  update-pdomain-deps.sh  update_github_actions.py
specs/: 00-overview.md  01-data-models.md  02-backend.md  03-frontend.md  04-profiles-and-config.md  05-dataset-kanban.md  06-training-runs.md  07-evaluation-and-metrics.md  08-models.md  09-hf-integration.md  10-jobs-and-sse.md  11-notifications.md  12-hotkeys-a11y.md  13-driver-contract.md  14-testing.md  15-deployment-dev.md  16-milestones.md  17-decisions.md  18-deferred-hf-datasets.md  19-deferred-glyph-classifier.md  README.md
src/pd_ocr_trainer_spa/: __init__.py  __main__.py  bootstrap.py  settings.py
src/pd_ocr_trainer_spa/adapters/: builders.py
src/pd_ocr_trainer_spa/api/: __init__.py  banners.py  datasets.py  env_js.py  eval.py  healthz.py  jobs.py  models.py  profiles.py  publish.py  runs.py  sources.py
src/pd_ocr_trainer_spa/core/: app_state.py  enums.py  errors.py  models.py
src/pd_ocr_trainer_spa/domain/: banners.py  datasets.py  eval.py  models.py  profiles.py  publish.py  runs.py  training_defaults.py
src/pd_ocr_trainer_spa/middleware/: __init__.py  error_handler.py
src/pd_ocr_trainer_spa/training/: __init__.py  config_build.py  events.py  fake_runner.py  worker_cmd.py
src/pd_ocr_trainer_spa/worker/: __init__.py  evaluate.py  train.py
src/pdomain_ocr_trainer_spa/: __init__.py  __main__.py  _version.py  bootstrap.py  pdomain-suite.json  settings.py
src/pdomain_ocr_trainer_spa/adapters/: __init__.py  builders.py
src/pdomain_ocr_trainer_spa/api/: __init__.py  banners.py  datasets.py  env_js.py  eval.py  healthz.py  jobs.py  models.py  profiles.py  publish.py  runs.py  sources.py  ui_prefs.py
src/pdomain_ocr_trainer_spa/core/: __init__.py  app_state.py  enums.py  models.py
src/pdomain_ocr_trainer_spa/domain/: banners.py  datasets.py  eval.py  labeler_export.py  models.py  profiles.py  (+3 more)
tests/: conftest.py  test_git_main_sources.py  test_git_master_sources.py  test_packaging.py  test_routes_root.py  test_ui_prefs.py  test_update_github_actions.py
tests/e2e/: test_driver_contract.py  test_labeler_freshness.py  test_m12_typeface.py  test_shell_migration.py
tests/fixtures/: stub_eval_worker.py  stub_worker.py
tests/slow/: test_eval_worker_e2e.py  test_stub_worker_e2e.py
tests/unit/: test_app_state.py  test_bootstrap_suite_app.py  test_dynamic_port.py  test_publish_domain.py  test_settings.py  test_version.py
(+64 files in other folders)
