[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pdomain-ocr-trainer-spa"
dynamic = ["version"]
description = "FastAPI + React SPA for OCR model training — replaces pdomain-ocr-training NiceGUI UI"
authors = [
    { name = "CT", email = "concavetrillion@gmail.com" }
]
readme = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.13"
dependencies = [
    "pdomain-book-tools>=0.14.1",
    "pdomain-ops>=0.3.0",
    # pdomain-ocr-training base install is torch-free: the FastAPI web process
    # imports only the typed config models + ITrainingRunner Protocol.
    # The training worker needs the heavy stack — see the `train` extra.
    "pdomain-ocr-training>=0.2.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
# Installs the torch/DocTR training stack for the worker subprocess.
# `uv tool install pdomain-ocr-trainer-spa[train]` on a training-capable host.
train = ["pdomain-ocr-training[train]"]

[project.scripts]
pdomain-ocr-trainer-ui = "pdomain_ocr_trainer_spa.__main__:main"

[project.urls]
Homepage = "https://github.com/pdomain/pdomain-ocr-trainer-spa"
Repository = "https://github.com/pdomain/pdomain-ocr-trainer-spa"

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "gitlint>=0.19.1",
    "pre-commit>=4.0",
    "psutil>=6.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.6",
    "ruff>=0.15.13",
    "httpx>=0.28",
]
e2e = [
    "pytest-playwright>=0.5",
]

[[tool.uv.index]]
name = "pdomain-index-pip"
url = "https://pdomain.github.io/pdomain-index-pip/simple/"
explicit = true

[tool.uv]
required-version = ">=0.11.16"

[tool.uv.sources]
pdomain-book-tools = { index = "pdomain-index-pip" }
pdomain-ops = { index = "pdomain-index-pip" }
pdomain-ocr-training = { index = "pdomain-index-pip" }

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
# Include the gitignored Vite build output in BOTH the sdist and the wheel.
# src/pdomain_ocr_trainer_spa/static/ is gitignored (generated artefact), so
# hatchling's default VCS-based file selection silently omits it. Setting
# `artifacts` globally (not just in the wheel target) ensures:
#   1. The sdist contains src/pdomain_ocr_trainer_spa/static/ (the built SPA).
#   2. The wheel built from that sdist also includes the static files.
# Without this, `uv build` (default: sdist then wheel-from-sdist) produces a
# wheel with 0 static files even when `artifacts` is set only in the wheel
# target, because hatchling builds the wheel in a non-git temp dir from the
# sdist and applies the per-target artifact spec against that dir.
artifacts = ["src/pdomain_ocr_trainer_spa/static/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/pdomain_ocr_trainer_spa"]
# The global `artifacts` above also covers this target; no additional per-wheel
# artifacts entry needed (duplication would be harmless but confusing).

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "N",
    "B",
    "SIM",
    "UP",
    "RUF",
    "ERA",
    "T20",
    "ANN",
    "S",
    "C4",
    "PERF",
    "TC",
    "TID",
    "PT",
    "RET",
    "PL",
    "D",
    "BLE",
    "TRY",
    "LOG",
    "G",
]
ignore = [
    "B008",
    "UP042",
    "E501",
    "D203",
    "D212",
    "D100",
    "D104",
    "D107",
    "PLR0913",
    "PLR2004",
    "TRY003",
    "COM812",
    "PLC0415",
    "PLR0912",
    "PLR0911",
    "PLR0915",
    "ANN401",
    "D205",
    "D105",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E741", "N806", "N811", "S101", "S104", "S105", "S106", "S301", "S311", "S603", "S607", "T201", "ANN", "D", "PLR2004", "PT011", "PT018", "S108", "PLR0133", "PLW2901", "PLW1510", "PERF401", "PERF402", "TRY", "BLE001", "TC"]
"scripts/*.py" = ["T201", "D", "ANN", "S603", "S607", "PLW1510"]
"**/__init__.py" = ["D104", "F401", "TC"]
"**/_*.py" = ["D"]
"src/pdomain_ocr_trainer_spa/__main__.py" = ["ANN", "D", "T201"]
"build_hooks/*.py" = ["T201", "D", "ANN", "S603", "S607", "PLW1510"]

[tool.basedpyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules"]
typeCheckingMode = "recommended"
# Warnings are gated via a baseline file (.basedpyright/baseline.json) that grandfathers
# existing warnings from sibling-dep stub gaps. New warnings beyond the baseline will
# fail CI. Regenerate the baseline with: uv run basedpyright src/pdomain_ocr_trainer_spa --writebaseline
failOnWarnings = true
reportImportCycles = "none"
# pdomain-* sibling packages don't ship py.typed; suppress stub-gap noise.
reportMissingTypeStubs = "none"
venvPath = "."
venv = ".venv"

[[tool.basedpyright.executionEnvironments]]
root = "tests"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=pdomain_ocr_trainer_spa",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "-m", "not slow",
]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning:coverage.*",
]
markers = [
    "slow: marks tests as slow (excluded from default make test run)",
    "e2e: marks tests as end-to-end (requires a running server)",
]
